data/derived/comb/progs/unify/prog2202.ml.out
Characters 85-87:
  | Sine ex -> sin(pi*.eval (ex x y) );;
                             ^^
Error: This expression has type expr
       This is not a function; it cannot be applied.
